[0.85]
- fixed bug in generate() when providing the first state in a sequence (s1 argument)
- generate(): added cnames argument to provide names for the state sequence object containing the generated sequences
- Added RColorBrewer to depends field in DESCRIPTION, otherwise the example using brewer.pal() avoids the package to be build 

[0.84]
- changed NAMESPACE and DESCRIPTION to avoid NOTE in package check
- changed welcome message in zzz.R
- added 'base' argument in predict() function

[0.83]
- updated 'pmine' method: 
  - unapproriate error message when no pattern satisfying criterion (reported by Aron Lindberg)
  - now both pmin and pmax can be specified
  - added 'prefix' option.

[0.82]
- displaying properly y axis label in pplot and pqplot

[0.81]
- modified examples in help pages to meet CRAN requirements ('Examples should run for no more than a few seconds each')

[0.80]
- help pages prepared for submission to the CRAN

[0.75]
- added a 'logLik' slot to 'PSTf' objects so that the log-likelihood is computed once, when the model is learned.
The logLik method now extracts the 'logLik' slot of a 'PSTf' object, instead of computing the value by predicting the learning sample with the object.

[0.74]
- BIC generic function now works on PST (added the 'nobs' method to get the number of observations, i.e. number of 
  symbols in the learning sample)

[0.73]
- new version of the generate method, much faster

[0.72]
- added the pdist method to compute probabilistic distance measure between models

[0.71]
- changes in the print method for objects of class PSTr and PSTf
- changes in the pstree method
- cprob method: added 'to.list' option used by pstree

[0.68]
- changed arugments for the prune function: "gain" defines the information gain function used for pruning decisions and "cutoff" is the cutoff value
- changed arugments for the tune function: "gain" and "cutoff" see modification for the prune function