@@ -1,7 +1,10 @@
 [0.85]
 - fixed bug in generate() when providing the first state in a sequence (s1 argument)
 - generate(): added cnames argument to provide names for the state sequence object containing the generated sequences
-- Added RColorBrewer to depends field in DESCRIPTION, otherwise the example using brewer.pal() avoids the package to be build 
+- Added RColorBrewer to depends field in DESCRIPTION, otherwise the example using brewer.pal() avoids the package to be build
+- Added a likelihood internal function that computes the (log)-likelihood of a PST, i.e., predicts the data to which the PST was fitted 
+  with the PST. This function is used in pstree(), prune()
+- Added a 'lik' option to prune(). If TRUE (default), the likelihood of the newly pruned PST is computed 
 
 [0.84]
 - changed NAMESPACE and DESCRIPTION to avoid NOTE in package check
